kubernetes/frontend-deployment.yaml
# kubernetes/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dlp-frontend
  namespace: dlp-ns
  labels:
    app: dlp-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: dlp-frontend
  template:
    metadata:
      labels:
        app: dlp-frontend
    spec:
      containers:
        - name: frontend
          image: your-dockerhub-username/dlp-frontend:latest # <--- ЗАМЕНИТЕ НА ВАШ ОБРАЗ
          imagePullPolicy: Always
          ports:
            - containerPort: 80 # Nginx в Dockerfile фронтенда слушает на 80 порту
              name: http
